fix build and add readme