@@ -38,5 +38,11 @@ dependencies {
 }
 
 test {
+	jvmArgs(['--enable-preview'])
 	useJUnitPlatform()
+}
+
+
+tasks.withType(JavaCompile).each {
+	it.options.compilerArgs.add('--enable-preview')
 }
